[package]
name = "solana_smart_lottery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
solana-program = "1.17.0"
switchboard_xyz = { path = "C:\solana-smart-lottery\solana_smart_lottery\sdk\solana-sdk" }